format education date and address in the same manner as employment.

--- a/src/main/html/resume.html
+++ b/src/main/html/resume.html
@@ -16,16 +16,18 @@
 <div class="hresume container">
 <div class="row hero-unit">
 <div class="span12 contact vcard" id="contactvcard">
-<blockquote>
-<h2 id="cv" class="brand">
+<div class="row">
+<h2>
 <div>
 <div class="fn n">
 <span class="given-name">Paul</span>
 <span class="family-name">O'Connell</span>
-</div> Curriculum Vitae</div>
+</div>
+<span>Curriculum Vitae</span>
+</div>
 <small>M.Sc, B.A.I, B.A</small>
 </h2>
-</blockquote>
+</div>
 <div class="row show-grid">
 <div class="span3">
 <div class="adr">
@@ -116,11 +118,12 @@
 <li class="experience vevent vcard" id="Arantechvcard">
 <div class="htitle">
 <h3>
-<a href="http://www.arantech.com/" target="_blank" class="org url">
+<a title="Arantech" href="http://www.arantech.com/" target="_blank" class="org url">
 <div class="fn">
 <span class="summary">Arantech</span>
 </div>
 </a>
+<small class="pull-right">Blackrock, Dublin</small>
 <small>
 <div class="date date_duration">
 <abbr title="2010-01" class="dtstart">2010-01</abbr> - <abbr title="2012-06" class="dtend">2012-06</abbr>
@@ -129,14 +132,14 @@
 </h3>
 <ul class="unstyled description">
 <li>
-<span>Java contractor working on various Customer Experience Management components for use by the mobile operators.</span>
+<span>Java contractor working on various Customer Experience Management components in the Touchpoint and Proaction products.</span>
 </li>
 <ul>
 <li>
-<span>Introduction of a generic entity framework into the core Touchpoint product.</span>
+<span>Implemented a generic entity framework to handle CRUD operations in the core Touchpoint product.</span>
 </li>
 <li>
-<span>Create a test framework for integration and system testing of the product.</span>
+<span>Created a test framework for integration and system testing of the product.</span>
 </li>
 <li>
 <span>Introduced the use of the sonar code quality engine to the organisation.</span>
@@ -145,14 +148,16 @@
 </ul>
 </div>
 </li>
+<br/>
 <li class="experience vevent vcard" id="Aegonvcard">
 <div class="htitle">
 <h3>
-<a href="http://www.aegon.ie/" target="_blank" class="org url">
+<a title="Aegon" href="http://www.aegon.ie/" target="_blank" class="org url">
 <div class="fn">
 <span class="summary">Aegon</span>
 </div>
 </a>
+<small class="pull-right">IFSC, Dublin</small>
 <small>
 <div class="date date_duration">
 <abbr title="2008-10" class="dtstart">2008-10</abbr> - <abbr title="2009-10" class="dtend">2009-10</abbr>
@@ -161,24 +166,32 @@
 </h3>
 <ul class="unstyled description">
 <li>
-<span>Java contractor within the Aegon office providing service for the UK and Dutch Aegon companies.</span>
+<span>Java contractor within the Aegon office providing support for UK and Dutch pension providers.</span>
 </li>
 <ul>
 <li>
-<span>Validation Service Replatforming Conversion of a legacy client side validation component onto a JBoss J2EE platform to allow support for EJB and Webservice requests. Hibernate, Spring with Wicket UI.</span>
+<span>Implemented a validation service that allowed for reuse of rule hierarchies across products and locales from a database configuration.</span>
+</li>
+<li>
+<span>The service was exposed via EJB and a WebService and replace hardcoded validation rules within a Swing client.</span>
+</li>
+<li>
+<span>Provided a Wicket based UI to visualise the configurations.</span>
 </li>
 </ul>
 </ul>
 </div>
 </li>
+<br/>
 <li class="experience vevent vcard" id="Terranuavcard">
 <div class="htitle">
 <h3>
-<a href="http://www.terranua.com/" target="_blank" class="org url">
+<a title="Terranua" href="http://www.terranua.com/" target="_blank" class="org url">
 <div class="fn">
 <span class="summary">Terranua</span>
 </div>
 </a>
+<small class="pull-right">Hatch Street, Dublin</small>
 <small>
 <div class="date date_duration">
 <abbr title="2008-03" class="dtstart">2008-03</abbr> - <abbr title="2009-09" class="dtend">2009-09</abbr>
@@ -187,24 +200,29 @@
 </h3>
 <ul class="unstyled description">
 <li>
-<span>Terranua, Dublin, Ireland Java contractor within terranua’s consultancy group focused on providing a risk control system to the Fidelity organization. Full front to back development work, using Spring (MVC) and Hibernate technologies to deploy within Tomcat/Websphere with an Oracle DB.</span>
+<span>Java contractor within Terranua’s consultancy group focused on providing a risk control system to the Fidelity organization.</span>
 </li>
 <ul>
 <li>
 <span>Risk Reporting Responsible for a risk reporting system which queries risk details from the DB, creating a xml report which is then transformed via XSL to html and word formats for user preview and printing.</span>
 </li>
+<li>
+<span>Full front to back development work, using Spring (MVC) and Hibernate technologies to deploy within Tomcat/Websphere with an Oracle DB.</span>
+</li>
 </ul>
 </ul>
 </div>
 </li>
+<br/>
 <li class="experience vevent vcard" id="Norkomvcard">
 <div class="htitle">
 <h3>
-<a href="https://www.deticanetreveal.com" target="_blank" class="org url">
+<a title="Norkom" href="https://www.deticanetreveal.com" target="_blank" class="org url">
 <div class="fn">
 <span class="summary">Norkom</span>
 </div>
 </a>
+<small class="pull-right">Henry St, Dublin</small>
 <small>
 <div class="date date_duration">
 <abbr title="2007-10" class="dtstart">2007-10</abbr> - <abbr title="2008-02" class="dtend">2008-02</abbr>
@@ -217,20 +235,22 @@
 </li>
 <ul>
 <li>
-<span>Watch List Management Day to day work involves bug fixing and small pieces of new development on various branches of this sub-project.</span>
+<span>Watch List Management Day to day work involved bug fixing and small pieces of new development on various branches of this sub-project.</span>
 </li>
 </ul>
 </ul>
 </div>
 </li>
+<br/>
 <li class="experience vevent vcard" id="Curamvcard">
 <div class="htitle">
 <h3>
-<a href="http://www.curamsoftware.com/" target="_blank" class="org url">
+<a title="Curam" href="http://www.curamsoftware.com/" target="_blank" class="org url">
 <div class="fn">
 <span class="summary">Curam</span>
 </div>
 </a>
+<small class="pull-right">Park West, Dublin</small>
 <small>
 <div class="date date_duration">
 <abbr title="2006-09" class="dtstart">2006-09</abbr> - <abbr title="2007-09" class="dtend">2007-09</abbr>
@@ -243,7 +263,7 @@
 </li>
 <ul>
 <li>
-<span>Unemployment Insurance Java developer within the workflow group which involved the full software development lifecycle on various J2EE platforms.</span>
+<span>I worked on the Unemployment Insurance product within the workflow group which involved the full software development lifecycle on various J2EE platforms.</span>
 </li>
 <li>
 <span>Implementation of a unit testing framework and tools to auto-generate unit test stubs from the project model.</span>
@@ -255,14 +275,16 @@
 </ul>
 </div>
 </li>
+<br/>
 <li class="experience vevent vcard" id="UBSvcard">
 <div class="htitle">
 <h3>
-<a href="http://www.ubs.com/global/en/investment-bank/institutions/foreign-exchange.html" target="_blank" class="org url">
+<a title="UBS" href="http://www.ubs.com/global/en/investment-bank/institutions/foreign-exchange.html" target="_blank" class="org url">
 <div class="fn">
 <span class="summary">UBS</span>
 </div>
 </a>
+<small class="pull-right">Europastrasse 2, Zurich</small>
 <small>
 <div class="date date_duration">
 <abbr title="2003-11" class="dtstart">2003-11</abbr> - <abbr title="2006-05" class="dtend">2006-05</abbr>
@@ -289,14 +311,16 @@
 </ul>
 </div>
 </li>
+<br/>
 <li class="experience vevent vcard" id="UBSvcard">
 <div class="htitle">
 <h3>
-<a href="http://www.ubs.com/global/en/investment-bank/institutions/foreign-exchange.html" target="_blank" class="org url">
+<a title="UBS" href="http://www.ubs.com/global/en/investment-bank/institutions/foreign-exchange.html" target="_blank" class="org url">
 <div class="fn">
 <span class="summary">UBS</span>
 </div>
 </a>
+<small class="pull-right">Liverpool St, London</small>
 <small>
 <div class="date date_duration">
 <abbr title="2003-01" class="dtstart">2003-01</abbr> - <abbr title="2003-10" class="dtend">2003-10</abbr>
@@ -309,7 +333,7 @@
 </li>
 <ul>
 <li>
-<span>Lead Java developer on the Swix tool to handle open positions on a daily basis. My
+<span>Java developer on the Swix tool to handle open positions on a daily basis. My
                             responsibilities included the initial XML protocol specification, implementation of a web application
                             (Tomcat) and co-ordination of testing with other groups and business users.</span>
 </li>
@@ -317,14 +341,16 @@
 </ul>
 </div>
 </li>
+<br/>
 <li class="experience vevent vcard" id="Erissonvcard">
 <div class="htitle">
 <h3>
-<a href="http://www.ericsson.com/ie/" target="_blank" class="org url">
+<a title="Erisson" href="http://www.ericsson.com/ie/" target="_blank" class="org url">
 <div class="fn">
 <span class="summary">Erisson</span>
 </div>
 </a>
+<small class="pull-right">Clonskeagh, Dublin</small>
 <small>
 <div class="date date_duration">
 <abbr title="2000-10" class="dtstart">2000-10</abbr> - <abbr title="2002-12" class="dtend">2002-12</abbr>
@@ -343,6 +369,7 @@
 </ul>
 </div>
 </li>
+<br/>
 </ol>
 </div>
 <hr/>
@@ -351,31 +378,37 @@
 <div class="vcalendar">
 <div class="education vevent vcard" id="M.Sc Network and Distributed Systemsvcard">
 <div class="htitle">
+<h3 class="summary">
+<a title="Department of Computer Science, Trinity College Dublin" href="http://www.scss.tcd.ie/postgraduate/mscnds/" target="_blank" class="fn org url">
 <span class="summary">M.Sc Network and Distributed Systems</span>
-<br/>
-<span class="description">Dissertation Title: Collaborative Ad-hoc Applications. An investigation into the use of trust based security in ad-hoc JINI systems.</span>
-<br/>
-<span>
-<a title="Department of Computer Science, Trinity College Dublin" href="http://www.scss.tcd.ie/postgraduate/mscnds/" class="fn org url">Department of Computer Science, Trinity College Dublin</a>
-</span>
-</div>
+</a>
+<small class="pull-right">Department of Computer Science, Trinity College Dublin</small>
+<small>
 <div class="date_duration">
 <abbr title="1999-10" class="dtstart">1999-10</abbr> : <abbr title="2000-10" class="dtend">2000-10</abbr>
 </div>
+</small>
+</h3>
+<span class="description">Dissertation Title: Collaborative Ad-hoc Applications. An investigation into the use of trust based security in ad-hoc JINI systems.</span>
+</div>
+<br/>
 </div>
 <div class="education vevent vcard" id="B.A.I in Computer and Electronic Engineering, B.A in Engineering Mathematicsvcard">
 <div class="htitle">
+<h3 class="summary">
+<a title="Department of Engineering, Trinity College Dublin" href="http://www.tcd.ie/Engineering/" target="_blank" class="fn org url">
 <span class="summary">B.A.I in Computer and Electronic Engineering, B.A in Engineering Mathematics</span>
-<br/>
-<span class="description">Final Year Project Title: Digital Filtering System for Internet Telephony.</span>
-<br/>
-<span>
-<a title="Department of Engineering, Trinity College Dublin" href="http://www.tcd.ie/Engineering/" class="fn org url">Department of Engineering, Trinity College Dublin</a>
-</span>
-</div>
+</a>
+<small class="pull-right">Department of Engineering, Trinity College Dublin</small>
+<small>
 <div class="date_duration">
 <abbr title="1995-09" class="dtstart">1995-09</abbr> : <abbr title="1999-06" class="dtend">1999-06</abbr>
 </div>
+</small>
+</h3>
+<span class="description">Final Year Project Title: Digital Filtering System for Internet Telephony.</span>
+</div>
+<br/>
 </div>
 </div>
 </div>
